--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "/home/s23380420@unn.global/Code/SecondYear/BeginTask-0"
+    "cmake.sourceDirectory": "D:/Code/SecondYear/BeginTask-0",
+    "files.associations": {
+        "cstring": "cpp"
+    }
 }
